adds some styles

--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -1,7 +1,9 @@
 <section class="hero section" id="hero">
   <div class="container bookslist-wrapper">
     <!-- <include src = "sidebar.html"> -->
-    <h1 class="hero-heading">Best Sellers Books</h1>
+    <h1 class="hero-heading">
+      Best Sellers <span class="heading-painter">Books</span>
+    </h1>
     <ul class="categories-prewiews">
       <li class="cateory-preview">
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
@@ -14,7 +16,7 @@
                 class="book-photo"
               />
               <h2 class="book-name">Book name</h2>
-              <h3 class="author-name">Athor</h3>
+              <h3 class="author-name">Author</h3>
             </a>
           </li>
           <li class="book-card">
@@ -28,6 +30,7 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
+          <li class="btn-loadmore-book">see more</li>
         </ul>
       </li>
       <li class="cateory-preview">
@@ -41,7 +44,7 @@
                 class="book-photo"
               />
               <h2 class="book-name">Book name</h2>
-              <h3 class="author-name">Athor</h3>
+              <h3 class="author-name">Author</h3>
             </a>
           </li>
           <li class="book-card">
@@ -55,6 +58,7 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
+          <li class="btn-loadmore-book">see more</li>
         </ul>
       </li>
     </ul>
