more styles + markup fix

--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -9,7 +9,11 @@
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
         <ul class="category-preview-books">
           <li class="book-card">
-            <a href="https://google.com" class="book-link"
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
               ><img
                 src="https://picsum.photos/id/237/300/200"
                 alt="book"
@@ -20,7 +24,11 @@
             </a>
           </li>
           <li class="book-card">
-            <a href="https://google.com" class="book-link"
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
               ><img
                 src="https://picsum.photos/id/237/300/200"
                 alt="book"
@@ -30,14 +38,23 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
-          <li class="btn-loadmore-book">see more</li>
+          <!-- <li class="btn-loadmore-book-wraper">
+            <button type="button">see more</button>
+          </li> -->
         </ul>
+        <li class="btn-loadmore-book-wraper">
+            <button type="button" class = "btn-loadmore">see more</button>
+          </li>
       </li>
       <li class="cateory-preview">
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
         <ul class="category-preview-books">
           <li class="book-card">
-            <a href="https://google.com" class="book-link"
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
               ><img
                 src="https://picsum.photos/id/237/300/200"
                 alt="book"
@@ -48,7 +65,11 @@
             </a>
           </li>
           <li class="book-card">
-            <a href="https://google.com" class="book-link"
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
               ><img
                 src="https://picsum.photos/id/237/300/200"
                 alt="book"
@@ -58,8 +79,13 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
-          <li class="btn-loadmore-book">see more</li>
+          <!-- <li class="btn-loadmore-book-wraper">
+            <button type="button">see more</button>
+          </li> -->
         </ul>
+        <li class="btn-loadmore-book-wraper">
+            <button type="button" class = "btn-loadmore">see more</button>
+          </li>
       </li>
     </ul>
   </div>
