--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -12,6 +12,16 @@
   text-transform: uppercase;
   margin-bottom: 18px;
 }
+.book-name {
+  color: var(--black-color);
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+.author-name {
+  color: #b4afaf;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 /* @media only screen and (min-width: 320px) {
    {
   }
@@ -22,8 +32,20 @@
     font-size: 48px;
   }
 }
-
+.btn-loadmore {
+  padding: 14px 28px;
+  color: var(--black-color);
+  text-transform: uppercase;
+  font-size: 14px;
+  border-radius: 40px;
+  border: 2px var(--categories-links-active-color);
+}
 /* @media only screen and (min-width: 1440px) {
    {
   }
 } */
+@media only screen and (max-width: 768px) {
+  .category-preview-books:nth-child(n + 2) {
+    display: none;
+  }
+}
