--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -22,30 +22,55 @@
   font-size: 14px;
   text-transform: uppercase;
 }
+.category-preview-books {
+  margin-bottom: 8px;
+}
 /* @media only screen and (min-width: 320px) {
    {
   }
 } */
 
-@media only screen and (min-width: 768px) {
-  .hero-heading {
-    font-size: 48px;
-  }
-}
 .btn-loadmore {
   padding: 14px 28px;
+  min-width: 124px;
+  max-height: 46px;
   color: var(--black-color);
   text-transform: uppercase;
   font-size: 14px;
   border-radius: 40px;
-  border: 2px var(--categories-links-active-color);
+  border-style: solid;
+  border-width: 2px;
+  border-color: var(--categories-links-active-color);
+  margin-left: auto;
+  /* margin-bottom: 40px; */
 }
-/* @media only screen and (min-width: 1440px) {
-   {
+.btn-loadmore-wrapper {
+  margin-bottom: 40px;
+}
+@media only screen and (min-width: 768px) {
+  .hero-heading {
+    font-size: 48px;
   }
-} */
-@media only screen and (max-width: 768px) {
-  .category-preview-books:nth-child(n + 2) {
+  .category-preview-books {
+    margin-bottom: 32px;
+    display: flex;
+    gap: 25px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .book-card {
     display: none;
+  }
+  .book-card:first-child {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .category-preview-books {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 24px;
   }
 }
