--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -42,9 +42,9 @@
             <button type="button">see more</button>
           </li> -->
         </ul>
-        <li class="btn-loadmore-book-wraper">
-            <button type="button" class = "btn-loadmore">see more</button>
-          </li>
+        <!-- <li class="btn-loadmore-book-wraper"> -->
+        <button type="button" class="btn-loadmore">see more</button>
+        <!-- </li> -->
       </li>
       <li class="cateory-preview">
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
@@ -83,9 +83,9 @@
             <button type="button">see more</button>
           </li> -->
         </ul>
-        <li class="btn-loadmore-book-wraper">
-            <button type="button" class = "btn-loadmore">see more</button>
-          </li>
+        <!-- <li class="btn-loadmore-book-wraper"> -->
+        <button type="button" class="btn-loadmore">see more</button>
+        <!-- </li> -->
       </li>
     </ul>
   </div>
