--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -38,13 +38,12 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
-          <!-- <li class="btn-loadmore-book-wraper">
-            <button type="button">see more</button>
-          </li> -->
+          
         </ul>
-        <!-- <li class="btn-loadmore-book-wraper"> -->
-        <button type="button" class="btn-loadmore">see more</button>
-        <!-- </li> -->
+        <li class="btn-loadmore-book-wraper">
+            <button type="button" class="btn-loadmore">see more</button>
+          </li>
+        
       </li>
       <li class="cateory-preview">
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
@@ -79,13 +78,11 @@
               <h3 class="author-name">Athor</h3>
             </a>
           </li>
-          <!-- <li class="btn-loadmore-book-wraper">
-            <button type="button">see more</button>
-          </li> -->
+          
         </ul>
-        <!-- <li class="btn-loadmore-book-wraper"> -->
+        <li class="btn-loadmore-book-wraper">
         <button type="button" class="btn-loadmore">see more</button>
-        <!-- </li> -->
+        </li>
       </li>
     </ul>
   </div>
