--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -19,11 +19,16 @@
 }
 .author-name {
   color: #b4afaf;
-  font-size: 14px;
-  text-transform: uppercase;
+  font-size: 12px;
+  font-style: italic;
+  text-transform: capitalize;
+  font-weight: 400;
 }
 .category-preview-books {
   margin-bottom: 8px;
+}
+.book-photo {
+  margin-bottom: 14px;
 }
 /* @media only screen and (min-width: 320px) {
    {
@@ -31,6 +36,7 @@
 } */
 
 .btn-loadmore {
+  display: block;
   padding: 14px 28px;
   min-width: 124px;
   max-height: 46px;
@@ -44,7 +50,10 @@
   margin-left: auto;
   margin-bottom: 40px;
 }
-
+.book-card {
+  max-width: 335px;
+  width: 100%;
+}
 @media only screen and (min-width: 768px) {
   .hero-heading {
     font-size: 48px;
@@ -54,8 +63,18 @@
     display: flex;
     gap: 25px;
   }
+  .book-card {
+    max-width: 218px;
+    width: 100%;
+  }
+  .btn-loadmore {
+    min-width: 124px;
+    max-height: 46px;
+  }
 }
-
+.cateory-preview .btn-loadmore {
+  margin-left: auto;
+}
 @media only screen and (max-width: 767px) {
   .book-card {
     display: none;
@@ -70,5 +89,9 @@
     margin-bottom: 20px;
     display: flex;
     gap: 24px;
+  }
+  .book-card {
+    max-width: 180px;
+    width: 100%;
   }
 }
