--- a/src/partials/support_Ukraine.html
+++ b/src/partials/support_Ukraine.html
@@ -3,13 +3,13 @@
         <div class="wrapper">
           <h2 class="support__title">Support Ukraine</h2>
       
-          <svg class="support__icon" width="20" height="32">
+          <svg class="support-icon" width="20" height="32">
             <!-- <use href="./images/icons.svg#icon-arms-icon"></use> -->
           </svg>
         </div>
       
-        <div class="swiper-container">
-          <div class="logoContainer"></div>
+        <div class="swiper-div">
+          <div class="forLogoDiv"></div>
         </div>
         <button
           class="swiper-button-next"
