--- a/src/partials/support_Ukraine.html
+++ b/src/partials/support_Ukraine.html
@@ -4,10 +4,10 @@
           <h2 class="support__title">Support Ukraine</h2>
       
           <svg class="support-icon" width="20" height="32">
-            <!-- <use href="./images/icons.svg#icon-arms-icon"></use> -->
+            <use href="./images/sprite.svg#icon-coatofarms"></use>
           </svg>
         </div>
-      
+     
         <div class="swiper-div">
           <div class="forLogoDiv"></div>
         </div>
@@ -17,7 +17,7 @@
           aria-label="Scroll to show more founds"
         >
           <svg class="swiper-button-next__icon" width="22" height="22">
-            <!-- <use href="./images/icons.svg#icon-arrow-down-icon"></use> -->
+            <use href="./images/sprite.svg#icon-arrowscrolldown"></use>
           </svg>
         </button>
       </div>
