--- a/src/partials/support_Ukraine.html
+++ b/src/partials/support_Ukraine.html
@@ -2,12 +2,42 @@
     <div class="support__container">
         <div class="wrapper">
           <h2 class="support__title">Support Ukraine</h2>
-      
           <svg class="support-icon" width="20" height="32">
             <use href="./images/sprite.svg#icon-coatofarms"></use>
           </svg>
         </div>
-     
+    <!-- <div class="support-list">
+      <ul>
+        <li class="support-list-img">
+          <img src="./images/support/01-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/02-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/03-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/04-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/05-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/06-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/07-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/08-found-1.png" alt="">
+        </li>
+        <li>
+          <img src="./images/support/09-found-1.png" alt="">
+        </li>
+      </ul>
+    </div> -->
+    
         <div class="swiper-div">
           <div class="forLogoDiv"></div>
         </div>
