adds function for category (NOT READY)without event listeners

--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -1,5 +1,5 @@
 <section class="hero section" id="hero">
-  <!-- <div class="container bookslist-wrapper"> -->
+  <div class="container bookslist-wrapper">
     <!-- <include src = "sidebar.html"> -->
     <h1 class="hero-heading">
       Best Sellers <span class="heading-painter">Books</span>
@@ -85,5 +85,5 @@
         </li>
       </li>
     </ul>
-  <!-- </div> -->
+  </div>
 </section>
