--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -59,10 +59,13 @@
   .hero-heading {
     font-size: 48px;
   }
-  .category-preview-books {
+  .category-preview-books,
+  .category-all-books {
     margin-bottom: 32px;
     display: flex;
     gap: 25px;
+    flex-wrap: wrap;
+    column-gap: 40px;
   }
   .book-card {
     max-width: 218px;
