update JS pop-up

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,8 +1,8 @@
-<div class="modal" data-modal-open>
+<div class="maindiv" data-modal-open>
     <div class="modal-content" data-modal></div>
     <span class="close-button" data-modal-close>
-        <button type="button" class="close-mob">
-            <svg class="hr-mob">
+        <button type="button" class="close-mod-btn">
+            <svg class="img-svg">
                 <!-- <use href="./images/"></use> -->
             </svg>
         </button>
