--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -31,6 +31,7 @@
 .book-photo {
   margin-bottom: 14px;
   border-radius: 8px;
+  width: 100%;
 }
 /* @media only screen and (min-width: 320px) {
    {
