--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -8,7 +8,7 @@
       <li class="cateory-preview">
         <p class="category-preview-name">Combined Print and E-Book Fiction</p>
         <ul class="category-preview-books">
-          <li class="book-card">
+          <li class="book-card prewiew">
             <a
               href="https://google.com"
               class="book-link"
@@ -23,7 +23,7 @@
               <h3 class="author-name">Author</h3>
             </a>
           </li>
-          <li class="book-card">
+          <li class="book-card prewiew">
             <a
               href="https://google.com"
               class="book-link"
@@ -46,9 +46,9 @@
         
       </li>
       <li class="cateory-preview">
-        <p class="category-preview-name">Combined Print and E-Book Fiction</p>
+        <p class="category-preview-name">Hardcover Nonfiction</p>
         <ul class="category-preview-books">
-          <li class="book-card">
+          <li class="book-card prewiew">
             <a
               href="https://google.com"
               class="book-link"
@@ -63,7 +63,7 @@
               <h3 class="author-name">Author</h3>
             </a>
           </li>
-          <li class="book-card">
+          <li class="book-card prewiew">
             <a
               href="https://google.com"
               class="book-link"
