--- a/src/partials/all_categories.html
+++ b/src/partials/all_categories.html
@@ -1,10 +1,8 @@
 <div class="categories">
-  <h2 class="title-categories item">All categories</h2>
+  <!-- <h2 class="item title-categories">All categories</h2> -->
   <ul class="categories-list">
-    <!-- <li class="item"><a href="">Combined Print and E-book Fictionnp</a></li>
-    <li class="item"><a href="">Combined Print & E-book Nonfiction</a></li>
-    <li class="item"><a href="">Hardcover fiction</a></li>
-    <li class="item"><a href="">Hardcover nonfiction</a></li>
-    <li class="item"><a href="">Paperback trade fiction</a></li> -->
+    <li class="item title-categories">
+      <a href="./index.html">All categories</a>
+    </li>
   </ul>
 </div>
