--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -65,7 +65,7 @@
   .category-all-books {
     margin-bottom: 32px;
     display: flex;
-    gap: 25px;
+    gap: 24px;
     flex-wrap: wrap;
     column-gap: 40px;
   }
@@ -91,6 +91,11 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1439px) {
+  .category-preview-books,
+  .category-all-books {
+    /* flex-wrap: nowrap; */
+    row-count: 3;
+  }
   .prewiew.book-card {
     display: none;
   }
