--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -1,5 +1,5 @@
 <section class="hero section" id="hero">
-  <div class="container bookslist-wrapper">
+  <div class="bookslist-wrapper">
     <!-- <include src = "sidebar.html"> -->
     <h1 class="hero-heading">
       Best Sellers <span class="heading-painter">Books</span>
@@ -76,6 +76,51 @@
               />
               <h2 class="book-name">Book name</h2>
               <h3 class="author-name">Athor</h3>
+            </a>
+          </li>
+          <li class="book-card prewiew">
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="https://picsum.photos/id/237/300/200"
+                alt="book"
+                class="book-photo"
+              />
+              <h2 class="book-name">Book name</h2>
+              <h3 class="author-name">Author</h3>
+            </a>
+          </li>
+          <li class="book-card prewiew">
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="https://picsum.photos/id/237/300/200"
+                alt="book"
+                class="book-photo"
+              />
+              <h2 class="book-name">Book name</h2>
+              <h3 class="author-name">Author</h3>
+            </a>
+          </li>
+          <li class="book-card prewiew">
+            <a
+              href="https://google.com"
+              class="book-link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="https://picsum.photos/id/237/300/200"
+                alt="book"
+                class="book-photo"
+              />
+              <h2 class="book-name">Book name</h2>
+              <h3 class="author-name">Author</h3>
             </a>
           </li>
           
