--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -65,9 +65,10 @@
   .category-all-books {
     margin-bottom: 32px;
     display: flex;
-    gap: 24px;
+    gap: 40px 24px;
+  }
+  .category-all-books {
     flex-wrap: wrap;
-    column-gap: 40px;
   }
   .book-card {
     max-width: 218px;
@@ -91,8 +92,6 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1439px) {
-  
- 
   .prewiew.book-card {
     display: none;
   }
@@ -102,10 +101,10 @@
 }
 
 @media only screen and (min-width: 1440px) {
-  .category-preview-books {
+  .category-preview-books .category-all-books {
     margin-bottom: 20px;
     display: flex;
-    gap: 24px;
+    gap: 40px 24px;
   }
   .book-card {
     max-width: 180px;
