--- a/src/css/header.css
+++ b/src/css/header.css
@@ -102,6 +102,7 @@
     line-height: 18px;
     letter-spacing: -0.04em;
     text-transform: uppercase;
+    
 }
 
 
@@ -122,13 +123,13 @@
 }
 
 @media screen and (min-width: 320px) {
-    .header-item>.header-link-home {
+    .header-item > .header-link-home {
         display: none;
     }
 }
 
 @media screen and (min-width: 768px) {
-    .header-item>.header-link-home {
+    .header-item > .header-link-home {
         margin-right: 16px;
         display: flex;
     }
@@ -152,6 +153,7 @@
 .menu-link.current {
     background-color: #EAC645;
     padding: 8px 16px;
+    color: #111111;
 }
 
 .menu-link.current::after {
@@ -160,6 +162,7 @@
     height: 34px;
     display: block;
     background-color: #EAC645;
+    
 }
 
 @media screen and (min-width: 320px) {
@@ -167,8 +170,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        /* background-color: #fff; */
-
+        background-color: #fff;
+padding: 0;
     }
 
 }
@@ -188,4 +191,193 @@ width: 100%;
 justify-content: space-between;
 }
 
+/************** button cvicher *******************/
+.container-button{
+    display: flex;
+    align-items: center;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    margin-right: 14px;
+}
 
+.switch input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(180deg, #4F2EE8 0%, #DCDCDC 100%);
+    box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 1px;
+    bottom: 1.3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background: linear-gradient(180deg, #4F2EE8 0%, #686868 100%);
+}
+
+input:focus+.slider {
+    background: linear-gradient(180deg, #4F2EE8 0%, #686868 100%);
+    box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
+/* **************************modal *************************menu */
+
+@media screen and (min-width: 320px) {
+    .header {
+        /* position: relative; */
+        /* position: fixed;
+        top: 0;
+        left: 0; */
+        /* z-index: 100000; */
+        /* width: 100%; */
+        background-color: #FFFFFF;
+        padding: 18px 20px;
+
+    }
+}
+
+@media screen and (min-width: 320px) {
+    .mobile-menu {
+        display: flex;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+
+.mobile-menu {
+        /* margin-top: 65px; */
+        position:fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 100%);
+    /* pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);  */
+}
+
+/* .mobile-menu.is-open {
+    pointer-events: initial;
+    opacity: 1;
+    visibility: visible;
+    overflow: auto;
+    transform: translateX(0);
+} */
+.mobile-nav-list {
+    margin-top: 183px;
+   
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mobile-nav-item {
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    gap: 4px;
+}
+
+.header-link-home {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    color: var(--white-color);
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+}
+
+.header-link-shoppingcart {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.svg-mobail {
+    margin-left: 4px;
+    fill: #FFFFFF
+}
+
+.menu-link-mobail {
+    position: relative;
+    display: inline-flex;
+    border-radius: 36px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link-mobail.current {
+    background-color: #EAC645;
+    color: var(--black-color);
+    padding: 8px 16px;
+}
+
+.menu-link-mobail.current::after {
+    position: absolute;
+    width: 100%;
+    height: 34px;
+    display: block;
+    background-color: #EAC645;
+}
+.mobile-nav-item-img{
+position: relative;
+z-index: 1;
+ margin-top: 125px;
+}
