--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,12 @@
           </a>
         </li>
         <li class="header-item">
-          <a class="header-link-home menu-link current" href="">HOME</a>
+          <a class="header-link-home menu-link current" href="./index.html"
+            >HOME</a
+          >
         </li>
         <li class="header-item">
-          <a class="header-link menu-link" href="">
+          <a class="header-link menu-link" href="./shopping_list.html">
             <span> SHOPPING LIST</span>
             <svg class="svg" width="20" height="20">
               <use href="./images/sprite.svg#icon-shoppingcart"></use>
@@ -23,10 +25,36 @@
         </li>
       </ul>
     </nav>
-    <button class="button-burger">
-      <svg class="svg" width="20" height="20">
-        <use href="./images/sprite.svg#icon-burgermenu"></use>
-      </svg>
-    </button>
+    <!-- buttons -->
+    <div class="container-button">
+      <label class="switch">
+        <input type="checkbox" />
+        <span class="slider round"></span>
+      </label>
+      <button class="button-burger">
+        <svg class="svg" width="20" height="20">
+          <use href="./images/sprite.svg#icon-burgermenu"></use>
+        </svg>
+      </button>
+    </div>
+    <!-- mobail-menu -->
+    <div class="mobile-menu">
+      <ul class="mobile-nav-list">
+        <li class="mobile-nav-item">
+          <a class="header-link-home menu-link-mobail current" href="">HOME</a>
+        </li>
+        <li class="mobile-nav-item">
+          <a class="header-link-shoppingcart" href=" ">
+            <span>SHOPPING LIST</span>
+            <svg class="svg-mobail" width="20" height="20">
+              <use href="./images/sprite.svg#icon-shoppingcart"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-nav-item-img">
+          <img class="img" src="./images/shoplist/books.png" alt="book" />
+        </li>
+      </ul>
+    </div>
   </div>
 </header>
