--- a/src/css/support_Ukraine.css
+++ b/src/css/support_Ukraine.css
@@ -1,213 +1,181 @@
+.support-container {
+  width: 356px;
+  height: 490px;
+  margin-left: auto;
+    padding-top: 24px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
+    box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
+    border-radius: 16px;
+}
+.wrapper {
+  display: flex;
+  gap: 12px;
+  margin-bottom: 40px;
+}
+.support-title {
+  width: 205px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.14;
+  letter-spacing: -0.04em;
+  color: #ffffff;
+}
 
-@media only screen and (min-width: 768px) and (max-width: 1198px) {
-  .support-container {
-    width: 335px;
-    height: 472px;
-   
+.swiper-div {
+  height: 292px;
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.forLogoDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transition: transform 0.7s cubic-bezier(0.08, 0.82, 0.15, 0.94);
+}
+
+.logo__item {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.logo__item > img {
+  object-fit: cover;
+}
+
+.fundNumber {
+  width: 14px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3px;
+  align-items: flex-end;
+  letter-spacing: -0.04em;
+  color: #ffffff;
+}
+
+.logo__item {
+  height: 32px;
+}
+
+.buttonSlider {
+  width: 32px;
+  height: 32px;
+  background: #ffffff;
+  transform: rotate(90deg);
+}
+
+.swiper-button-next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.my-class:hover .swiper-button-next,
+.my-class:focus .swiper-button-next {
+  background-color: rgb(236, 221, 184);
+}
+
+.fund-item p {
+  font-size: 14px;
+}
+
+.fund-item p,
+.fund-item .logo__img {
+  transition: filter 0.3s;
+}
+
+.fund-item:hover p,
+.fund-item:focus p,
+.fund-item:hover .logo__img,
+.fund-item:focus .logo__img {
+  filter: brightness(60%) sepia(80) saturate(5) hue-rotate(5deg);
+}
+
+
+/* MOBILE */
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .support-container {
+      max-width: 335px;
+      height: 352px;
+      margin-left: auto;
       padding-top: 24px;
       padding-bottom: 20px;
       padding-left: 40px;
-      padding-right: 40px;
+      padding-right: 20px;
       background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
       box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
       border-radius: 16px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .support-container {
-    width: 356px;
-    height: 490px;
-   
-      padding-top: 24px;
-      padding-bottom: 20px;
-      padding-left: 40px;
-      padding-right: 40px;
-      background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-      box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-      border-radius: 16px;
-  }
-}
-  .wrapper {
-    display: flex;
-    gap: 12px;
-    margin-bottom: 40px;
-  }
-  .support-title {
-    width: 205px;
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 1.14;
-    letter-spacing: -0.04em;
-    color: #ffffff;
-  }
-  
-  /* .support-icon {
-    fill: #ffffff;
-  } */
-  
-  .swiper-div {
-    height: 200px;
-    overflow: hidden;
-    margin-bottom: 32px;
-  }
-
-  @media screen and (min-width: 320px) and (max-width: 1198px) {
-        .swiper-div {
-            height: 299px;
-            margin-bottom: 40px;;
-        }
     }
 
-  .forLogoDiv {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    transition: transform 0.7s cubic-bezier(0.08, 0.82, 0.15, 0.94);
-  }
-  
-  .logo__item {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-  }
-  
-  .logo__item > img {
-    object-fit: cover;
-  }
-  
-  .fundNumber {
-    width: 14px;
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.3px;
-    align-items: flex-end;
-    letter-spacing: -0.04em;
-    color: #ffffff;
-  }
-  
-  .logo__item {
-    height: 32px;
-  }
-  
-  .buttonSlider {
-    width: 32px;
-    height: 32px;
-    background: #ffffff;
-    transform: rotate(90deg);
-  }
-  
-  .swiper-button-next {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .my-class:hover .swiper-button-next,
-  .my-class:focus .swiper-button-next {
-    background-color: rgb(236, 221, 184);
-  }
-  
-  .fund-item p {
-    font-size: 14px;
-  }
-  
-  .fund-item p,
-  .fund-item .logo__img {
-    transition: filter 0.3s;
-  }
-  
-  .fund-item:hover p,
-  .fund-item:focus p,
-  .fund-item:hover .logo__img,
-  .fund-item:focus .logo__img {
-    filter: brightness(60%) sepia(80) saturate(5) hue-rotate(5deg);
-  }
-  
-  
-  /* MOBILE */
-@media screen and (min-width: 320px) and (max-width: 767px) {
-      .support-container {
-        max-width: 335px;
-        height: 352px;
-        margin-left: auto;
-        padding-top: 24px;
-        padding-bottom: 20px;
-        padding-left: 40px;
-        padding-right: 20px;
-        background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-        box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-        border-radius: 16px;
-      }
+.support-title {
+  width: 205px;
+  font-size: 28px;
+}
 
-  .support-title {
-    width: 205px;
-    font-size: 28px;
-  }
+.swiper-div {
+  height: 180px;
+  margin-bottom: 24px;
+}
 
-  .swiper-div {
-    height: 180px;
-    margin-bottom: 24px;
-  }
+.buttonSlider {
+  width: 28px;
+  height: 28px;
+}
 
-  .buttonSlider {
-    width: 28px;
-    height: 28px;
-  }
-
-  .swiper-button-next {
-    width: 32px;
-    height: 32px;
-  }
+.swiper-button-next {
+  width: 32px;
+  height: 32px;
+}
 
 
 }
 /* TABLET */
 @media only screen and (min-width: 768px) and (max-width: 1198px) {
-    .support-container {
-      width: 335px;
-      height: 472px;
-      margin-left: auto;
-        padding-top: 24px;
-        padding-bottom: 20px;
-        padding-left: 20px;
-        padding-right: 20px;
-        background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
-        box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
-        border-radius: 16px;
-    }
-  
-  .support-title {
-    width: 205px;
-    font-size: 28px;
+  .support-container {
+    width: 335px;
+    height: 472px;
+    margin-left: auto;
+      /* padding-top: 24px;
+      padding-bottom: 20px;
+      padding-left: 40px;
+      padding-right: 20px; */
+      background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #ffffff 100%);
+      box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
+      border-radius: 16px;
   }
 
-  .swiper-div {
-    height: 200px;
-    margin-bottom: 32px;
-  }
+.support-title {
+  width: 205px;
+  font-size: 28px;
+}
 
-  .forLogoDiv {
-    gap: 20px;
-  }
+.swiper-div {
+  height: 292px;
+  margin-bottom: 32px;
+}
 
-  .buttonSlider {
-    width: 32px;
-    height: 32px;
-  }
+.buttonSlider {
+  width: 32px;
+  height: 32px;
+}
 
-  .swiper-button-next {
-    width: 38px;
-    height: 38px;
-  }
+.swiper-button-next {
+  width: 38px;
+  height: 38px;
+}
 
 }
