--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,10 +1,22 @@
-<div class="maindiv" data-modal-open>
+<!-- <div class="maindiv" data-modal-open>
     <div class="modal-content" data-modal></div>
     <span class="close-button" data-modal-close>
         <button type="button" class="close-mod-btn">
             <svg class="img-svg">
-                <!-- <use href="./images/"></use> -->
+                <use href="./images/"></use> 
             </svg>
         </button>
     </span>
+</div> -->
+
+<div class="modal" data-modal-open>
+  <div class="modal-content" data-modal></div>
+  <span class="close-button" data-modal-close>
+    <button type="button" class="close-mob">
+      <svg class="hr-mob">
+        <!-- <use href="./images/header-icons.svg#icon-close"></use> -->
+      </svg>
+    </button>
+  </span>
+  <!-- <span class="shopping-list-info">Shopping List (0 books)</span> -->
 </div>
