--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -32,15 +32,18 @@
   margin-bottom: 14px;
   border-radius: 8px;
   width: 335px;
+  height: 485px;
 }
 @media only screen and (min-width: 768px) {
   .book-photo {
     width: 218px;
+    height: 316px;
   }
 }
 @media only screen and (min-width: 1440px) {
   .book-photo {
     width: 180px;
+    height: 256px;
   }
 }
 
