--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,8 @@
 
 @media screen and (min-width: 320px) {
     .header {
-        width: 100%;
         padding: 18px 20px;
-        /* height: 64px; */
+       
     }
 }
 
@@ -20,10 +19,9 @@
 }
 
 .header {
-    /* position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%; */
+position: relative;
+z-index: 999;
+background-color: #FFFFFF;
     display: flex;
     align-items: center;
     border: 1.5px solid #111111;
@@ -287,28 +285,29 @@ input:checked+.slider:before {
 }
 
 .mobile-menu {
+    
         /* margin-top: 65px; */
         position:fixed;
-    z-index: -1;
+    z-index: 998;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 100%);
-    /* pointer-events: none;
+    pointer-events: none;
     visibility: hidden;
     opacity: 0;
     transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);  */
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-/* .mobile-menu.is-open {
+.is-open {
     pointer-events: initial;
     opacity: 1;
     visibility: visible;
     overflow: auto;
     transform: translateX(0);
-} */
+}
 .mobile-nav-list {
     margin-top: 183px;
    
@@ -381,3 +380,13 @@ position: relative;
 z-index: 1;
  margin-top: 125px;
 }
+@media screen and (min-width: 320px) {
+    .button-burger-close{
+    background-color: #fff;
+   padding: 0;
+}
+}
+.is-hidden{
+    display: none;
+}
+
