update dark-theme base

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
             <svg class="svg-logo" width="24" height="24">
               <use href="./images/sprite.svg#icon-logo"></use>
             </svg>
-            <span>Bookshelf</span>
+            <span class="header__logo-text">Bookshelf</span>
           </a>
         </li>
         <li class="header-item">
@@ -28,7 +28,7 @@
     <!-- buttons -->
     <div class="container-button">
       <label class="switch">
-        <input type="checkbox" />
+        <input id="theme-switch" type="checkbox" />
         <span class="slider round"></span>
       </label>
       <button class="button-burger">
