--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,3 +5,4 @@
 @import url('./pop-up.css');
 @import url('./shopping-list.css');
 @import url('./support_Ukraine.css');
+@import url('./dark-theme.css');
