--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -1,8 +1,7 @@
 .shopping-list-section {
     width: 100%;
     height: 100%;
-    padding-top: 40px;
-    background-color: var(--white-color);
+    /* padding-top: 40px; */
 }
 
 @media screen and (min-width: 768px) {
@@ -34,7 +33,7 @@
     color: var(--black-color);
 }
 
-.shopping-title {
+/* .shopping-title {
     margin-bottom: 40px;
     font-weight: 700;
     font-size: 32px;
@@ -50,7 +49,7 @@
 
 .list-title {
     color: var(--categories-links-active-color);
-}
+} */
 
 .shopping-empty {
     width: 244px;
