--- a/src/partials/book-card.html
+++ b/src/partials/book-card.html
@@ -1,5 +1,9 @@
 <section class="hero section" id="hero">
   <div class="bookslist-wrapper">
     <!-- <include src = "sidebar.html"> -->
+    <h1 class="hero-heading">
+      Best Sellers <span class="heading-painter">Books</span>
+    </h1>
+    <ul class="categories-prewiews books-list-top"></ul>
   </div>
 </section>
