--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -129,3 +129,60 @@
     margin-bottom: 40px;
   }
 }
+
+.img-thumb {
+  position: relative;
+  overflow: hidden;
+  /* transition: ; */
+}
+/* .overlay {
+  position: absolute;
+  /* transform: translateY(-100%); */
+/* background-color: #eac645;
+height: 70px;
+width: 100%; */
+/* z-index: 10; 
+} */
+.img-thumb:hover .overlay {
+  transform: translateY(0);
+  transition-duration: 500ms;
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-transform: uppercase;
+
+  width: 100%;
+  height: 70px;
+
+  color: #ffffff;
+  background: #eac645;
+  border-radius: 0px 0px 8px 8px;
+
+  transform: translateY(100%);
+}
+/* .book-card__link:hover .book-card__overlay,
+.book-card__link:focus .book-card__overlay {
+  transform: translateY(0);
+} */
+
+.prewiew {
+}
+
+@keyframes slide-in-elliptic-top-fwd {
+  0% {
+    transform: translateY(-600px) rotateX(-30deg) scale(0);
+    transform-origin: 50% 100%;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) rotateX(0) scale(1);
+    transform-origin: 50% 1400px;
+    opacity: 1;
+  }
+}
