--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,4 @@
 @import url('./shopping-list.css');
 @import url('./support_Ukraine.css');
 @import url('./dark-theme.css');
+@import url('./scroll-up.css');
