update pop-up.js and pop-up.css
add svg(import amazon from '../images/popup/amazon.png';
import bookImage from '../images/popup/book.png';
import bookshop from '../images/popup/bookshop.png';
), grey color for it, remove scroll

--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -8,7 +8,7 @@
 }
 .hr-mob:hover,
 .hr-mob:focus {
-  fill: #4f2ee8;
+  fill: var(--categories-links-active-color);
 }
 
 .close-mob {
@@ -23,7 +23,7 @@
   justify-content: center;
   margin: 25px;
   margin-top: 56px;
-  border: 2px solid #4f2ee8;
+  border: 2px solid var(--categories-links-active-color);
   background-color: transparent;
   border-radius: 40px;
   padding-top: 10px;
@@ -38,8 +38,8 @@
 
 .add-to-list-button:hover,
 .add-to-list-button:focus {
-  color: #ffffff;
-  background-color: #4f2ee8;
+  color: var(--white-color);
+  background-color: var(--categories-links-active-color);
 }
 
 .modal {
@@ -69,7 +69,8 @@
   max-width: 800px;
   width: 80%;
   height: 762px;
-  overflow-y: auto;
+  overflow-y: hidden;
+  background-attachment: fixed;
   position: absolute;
 }
 .close-button {
@@ -93,40 +94,46 @@
   letter-spacing: -0.04em;
   text-align: left;
 
-  line-height: 1.16;
+  line-height: 1.13;
   color: var(--black-color);
   margin-top: 14px;
   margin-left: 4px;
 }
 .book-author {
-  font-family: DM Sans;
   font-size: 12px;
   font-style: italic;
   font-weight: 400;
   letter-spacing: -0.04em;
   text-align: left;
 
-  line-height: 1.28;
-  color: var(--books-title-color);
+  line-height: 1.16;
+  color: #B4AFAF;
   margin-top: 14px;
   margin-left: 4px;
   margin-bottom: 18px;
 }
 
 .book-description {
-  font-family: DM Sans;
   font-weight: 400;
   letter-spacing: -0.04em;
-  text-align: left;
+  text-align:start;
   font-size: 14px;
 
   line-height: 1.28;
   color: var(--black-color);
-  max-width: 280px;
+  max-width: 280px; 
   margin: 0;
   margin-bottom: 22px;
   margin-left: 4px;
 }
+
+.box-shoppingList-shop {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 20px;
+}
+
 .book-cover {
   width: 100%;
   width: 100%;
@@ -142,6 +149,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.shop-shoppingList-img1,
+.shop-shoppingList-img2 {
+  filter: grayscale(1);
 }
 
 .modal-content {
