add 3 @import for svg to pop-up.js

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -3,7 +3,7 @@
   <span class="close-button" data-modal-close>
     <button type="button" class="close-mob">
       <svg class="hr-mob">
-        <use href="./images/sprite.svg#icon-close"></use>
+        <use href="./images/sprite.svg#icon-closebtn"></use>
       </svg>
     </button>
   </span>
