--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,9 @@
-<header class="header container">
-  <div class="header-wrapper">
+<header class="header ">
+  <div class="header-wrapper ">
     <nav class="header-nav">
       <ul class="header-list">
         <li class="header-item">
-          <a class="header-link-logo" href="./index.html">
+          <a class="header-link-logo " href="./index.html">
             <svg class="svg-logo" width="24" height="24">
               <use href="./images/sprite.svg#icon-logo"></use>
             </svg>
@@ -11,13 +11,12 @@
           </a>
         </li>
         <li class="header-item">
-          <a class="header-link-home menu-link current" href="./index.html"
-            >HOME</a
+          <a class="header-link-home menu-link  " href="./index.html">HOME</a
           >
         </li>
-        <li class="header-item">
+        <li class="header-item  ">
           <a class="header-link menu-link" href="./shopping_list.html">
-            <span> SHOPPING LIST</span>
+            <span>SHOPPING LIST</span>
             <svg class="svg" width="20" height="20">
               <use href="./images/sprite.svg#icon-shoppingcart"></use>
             </svg>
@@ -26,7 +25,7 @@
       </ul>
     </nav>
     <!-- buttons -->
-    <div class="container-button">
+    <div class="container-button ">
       <label class="switch">
         <input id="theme-switch" type="checkbox" />
         <span class="slider round"></span>
@@ -41,27 +40,35 @@
           <use href="./images/sprite.svg#icon-closebtn"></use>
         </svg>
       </button>
+      <button  class="button-autor "  type="button">
+        Sign up
+        <svg class="svg-button" width="20" height="20">
+          <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
+        </svg>
+      </button>
     </div>
-
-    
 </header>
     <!-- mobail-menu -->
 <div class="mobile-menu js-menu-container">
       <ul class="mobile-nav-list">
         <li class="mobile-nav-item">
-          <a class="header-link-home menu-link-mobail current" href="./index.html">HOME</a>
+          <a class="header-link-home menu-link-mobail mobile-color  header-link-home-modal"  href="./index.html">HOME</a>
         </li>
         <li class="mobile-nav-item">
-          <a class="header-link-shoppingcart" href="./shopping_list.html">
+          <a class="header-link-shoppingcart  menu-link-mobail  " href="./shopping_list.html">
             <span>SHOPPING LIST</span>
-            <svg class="svg-mobail" width="20" height="20">
+            <svg class="svg-mobail " width="20" height="20">
               <use href="./images/sprite.svg#icon-shoppingcart"></use>
             </svg>
           </a>
         </li>
-        <li class="mobile-nav-item-img">
-          <img class="img" src="./images/shoplist/books.png" alt="book" />
-        </li>
-      </ul>
-    </div>
+       </ul>
+       <button class="btn-autor" type="button">Log out 
+        <svg class="svg-btn-autor" width="20" height="20">
+          <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
+        </svg>
+      </button>
+      <img class="img mobile-nav-item-img" src="./images/shoplist/books.png" alt="book" />
+
   </div>
+
