fixes bugs with modal

--- a/src/css/book-card.css
+++ b/src/css/book-card.css
@@ -137,7 +137,8 @@
   /* transition-duration: 500ms; */
 }
 
-.img-thumb:hover .overlay {
+.img-thumb:hover .overlay,
+.img-thumb:focus .overlay {
   transform: translateY(0);
 }
 
