--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -202,7 +202,7 @@
     font-size: 14px;
   }
   .add-to-list-button {
-    padding: 12px 120px;
+    padding: 12px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -236,7 +236,7 @@
     position: absolute;
     top: 30px;
     right: 105px;
-    animation: scale-in-center 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 600ms
+    animation: scale-in-center 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 600ms
       both;
   }
   .hr-mob:hover,
